[package]
name = "parser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
dotenv = "0.15.0"
regex = "1.9.1"
chrono = "0.4.26"
tempfile = "3.2.0"

